@@ -99,8 +99,10 @@ Authorization
 ---------------
 Thru openID Cloud Commander could authorize clients on GitHub.
 All things that should be done is must be added **id** and **secret** of application
-from github settings page and added to **config.json** or env varibles with names:
-*github_id* and *github_secret* that is more secure way.
+from github settings page and added to **config.json** (id just) and env varible (secret)
+with names: *github_id*, *github_secret*, *dropbox_key*, *dropbox_secret* etc.
+For more information see *config.json* and *shell/seret.bat* (**on win32**)
+or **shell/secret.sh** (**on *nix**).
 
 
 Starting
