@@ -59,7 +59,7 @@
         Server          : {},
         
         /* КОНСТАНТЫ */
-        INDEX           : main.DIR + '/' + 'index.html'
+        INDEX           : main.DIR + 'index.html'
     },
         DirPath             = '/',
         
