@@ -48,11 +48,10 @@
     
     function authenticate(pCode, pCallBack) {
         var lId             = Config.github_id,
-            lSecret         = Config.github_secret,
             lEnv            = process.env,
             
-            lClientId       = lEnv.github_id      || lId,
-            lClientSecret   = lEnv.github_secret  || lSecret;
+            lClientId       = lEnv.github_id || lId,
+            lClientSecret   = lEnv.github_secret;
                 
         var data = qs.stringify({
             client_id       : lClientId,
